fix user overflow

--- a/grails-app/assets/stylesheets/app/layout.less
+++ b/grails-app/assets/stylesheets/app/layout.less
@@ -17,6 +17,9 @@ body {
       display: none;
     }
   }
+  > ul.dropdown-menu {
+    z-index: 2000;
+  }
   &.loading {
     cursor: progress;
     &.splash-screen {
